; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_valops.c_push_word.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_valops.c_push_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEPRECATED_REGISTER_SIZE = common dso_local global i32 0, align 4
@MAX_REGISTER_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @push_word(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @DEPRECATED_REGISTER_SIZE, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @MAX_REGISTER_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %6, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @store_unsigned_integer(i8* %12, i32 %13, i32 %14)
  %16 = call i64 @INNER_THAN(i32 1, i32 2)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 %20, %19
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @write_memory(i32 %22, i8* %12, i32 %23)
  br label %32

25:                                               ; preds = %2
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @write_memory(i32 %26, i8* %12, i32 %27)
  %29 = load i32, i32* %5, align 4
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, %29
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %25, %18
  %33 = load i32, i32* %3, align 4
  %34 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %34)
  ret i32 %33
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @store_unsigned_integer(i8*, i32, i32) #2

declare dso_local i64 @INNER_THAN(i32, i32) #2

declare dso_local i32 @write_memory(i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
